# VK-bot

./: .env  .env(example)  .gitignoe  .gitignore  Dockerfile  Makefile  README.md  machine.py  main.py  main_v1.py  main_v2.py  main_v3.py  pyproject.toml  request_db.py  tests.py  word_db.py
recup_dir.1/: report.xml
